--- a/index.html
+++ b/index.html
@@ -27,26 +27,34 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod saepe eveniet accusantium optio laudantium numquam qui iusto, recusandae veniam. Nulla ab, ducimus repellendus doloribus illo aut. Repellat, quisquam mollitia beatae ducimus voluptas rem aliquid laboriosam nemo? Aut magnam, provident cum iure repellendus facilis qui odit nam quidem voluptatem aliquid ex voluptates numquam nesciunt, maiores voluptatibus, nisi inventore rem suscipit ducimus? Nulla perspiciatis iste minima iusto ratione perferendis at voluptas quibusdam consequatur. Voluptatum officiis modi quas voluptatem natus tempore esse. Amet dolores obcaecati doloribus fugiat eius, accusantium, voluptas aut numquam consequatur sed est dolore qui corporis in reprehenderit. Repellat vero ratione quasi ullam in libero deleniti ipsa, magnam commodi! Quia eos cupiditate ex, dolorum expedita laboriosam aperiam voluptas odio voluptatem ea totam qui unde suscipit quae est fugiat!</p>
         <a href="" class="btn">En savoir +</a>
     </section>
-    <section id="actualites">
+    <section id="actus">
         <h2>actualités</h2>
-        <article class="actu">
-            <h3>actualités</h3>
-            <div class="img-container"><img src="assets/images/Launch-Details-580.jpg" alt=""></div>
-            <p>Actualités du jour</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate odit consequuntur ratione excepturi a corporis aperiam illum ut, nihil dolorem perspiciatis mollitia dolores! Cum est totam eaque voluptas voluptatum fugit non similique enim? Dolor, beatae distinctio, atque sunt doloribus at rerum voluptatem a, quod sint odit nobis aspernatur recusandae eaque?</p>
-        </article>
-        <article class="actu">
-            <h3>actualités</h3>
-            <div class="img-container"><img src="assets/images/Launch-Details-580.jpg" alt=""></div>
-            <p>Actualités du jour</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate odit consequuntur ratione excepturi a corporis aperiam illum ut, nihil dolorem perspiciatis mollitia dolores! Cum est totam eaque voluptas voluptatum fugit non similique enim? Dolor, beatae distinctio, atque sunt doloribus at rerum voluptatem a, quod sint odit nobis aspernatur recusandae eaque?</p>
-        </article>
-        <article class="actu">
-            <h3>actualités</h3>
-            <div class="img-container"><img src="assets/images/Launch-Details-580.jpg" alt=""></div>
-            <p>Actualités du jour</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate odit consequuntur ratione excepturi a corporis aperiam illum ut, nihil dolorem perspiciatis mollitia dolores! Cum est totam eaque voluptas voluptatum fugit non similique enim? Dolor, beatae distinctio, atque sunt doloribus at rerum voluptatem a, quod sint odit nobis aspernatur recusandae eaque?</p>
-        </article>
+        <div class="container">
+            <article class="actu">
+                <h3>actualités</h3>
+                <div class="img-container"><img src="assets/images/Launch-Details-580.jpg" alt=""></div>
+                <div class="articletext">
+                    <p>Actualités du jour</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate odit consequuntur ratione excepturi a corporis aperiam illum ut, nihil dolorem perspiciatis mollitia dolores!</p>
+                </div>
+            </article>
+            <article class="actu">
+                <h3>actualités</h3>
+                <div class="img-container"><img src="assets/images/Launch-Details-580.jpg" alt=""></div>
+                <div class="articletext">
+                    <p>Actualités du jour</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate odit consequuntur ratione excepturi a corporis aperiam illum ut, nihil dolorem perspiciatis mollitia dolores! </p>
+                </div>
+            </article>
+            <article class="actu">
+                <h3>actualités</h3>
+                <div class="img-container"><img src="assets/images/Launch-Details-580.jpg" alt=""></div>
+                <div class="articletext">
+                    <p>Actualités du jour</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate odit consequuntur ratione excepturi a corporis aperiam illum ut, nihil dolorem perspiciatis mollitia dolores!</p>
+                </div>
+            </article>
+        </div>
     </section>
 </body>
 <footer>
@@ -56,7 +64,7 @@
             <li><a href="">Mentions légales</a></li>
             <li><a href="">Politique de confidentialité</a></li>
             <li><a href="">Préférences en matière de cookies</a></li>
-            <li><a href=""></a>Public ciblé</li>
+            <li><a href="">Public ciblé</a></li>
             <li><a href="">Recrutement</a></li>
         </ul>
     </div>
